# data_mining_framework

./: .gitignore  ARCHITECTURE.md  README.md  cli.py  pyproject.toml  requirements.txt  run_benchmark.py
benchmark_results/: Iris_Clustering_Benchmark_20251008_175758.csv  Iris_Clustering_Benchmark_20251008_175758.json
benchmarks/: __init__.py  benchmark.py  config_loader.py  core.py  registry.py  result_exporter.py  utils.py
configs/sample_configs/: clustering_benchmark.yaml  dr_cl_quality.yaml
core/: __init__.py  clustering.py  clustering_algorithm.py  clustering_quality_measure.py  dataset.py  dimensionality_reduction.py  dimensionality_reduction_quality_measure.py  distance_measure.py  pipeline.py  quality_measure.py
data_mining_framework/: __init__.py
data_mining_framework/benchmarks/: core.py  registry.py
data_mining_framework/core/: __init__.py  dimensionality_reduction_quality_measure.py  distance_measure.py  pipeline.py
data_mining_framework/implementations/: datasets.py
data_mining_framework/implementations/clustering/: __init__.py  dbscan.py  hierarchical.py  kmeans.py
data_mining_framework/implementations/clustering/quality/: calinski_harabasz.py  davies_bouldin.py  silhouette.py
data_mining_framework/implementations/distance/: cosine.py  euclidean.py  manhattan.py
data_mining_framework/implementations/dr/: __init__.py  mds_projection.py  pca_projection.py  tsne_projection.py
data_mining_framework/implementations/dr/quality/: continuity.py  reconstruction_error.py  trustworthiness.py
data_mining_framework/implementations/pipelines/: clustering_adapter.py  clustering_quality_adapter.py  dr_adapter.py  dr_quality_adapter.py
data_mining_framework/utils/: distance_utils.py  timer.py
examples/: dr_cl_quality.yaml
implementations/: __init__.py  datasets.py
implementations/DR/: mds_projection.py  pca_projection.py  tsne_projection.py
implementations/DR/quality/: __init__.py  continuity.py  reconstruction_error.py  trustworthiness.py
implementations/clustering/: dbscan.py  hierarchical.py  kmeans.py
implementations/clustering/quality/: __init__.py  calinski_harabasz.py  davies_bouldin.py  silhouette.py
implementations/distance/: __init__.py  cosine.py  euclidean.py  manhattan.py
implementations/pipelines/: __init__.py  clustering_adapter.py  clustering_quality_adapter.py  dr_adapter.py  dr_quality_adapter.py
implementations/quality/: calinski_harabasz.py  davies_bouldin.py
tests/: __init__.py  test_clustering_algorithm.py  test_dataset.py  test_dataset_implementations.py  test_distance_measure.py  test_quality_measure.py
utils/: distance_utils.py
