[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-mining-framework"
version = "0.1.0"
description = "A comprehensive framework for data mining algorithm benchmarking and evaluation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mario", email = "your.email@example.com"}
]
maintainers = [
    {name = "Mario", email = "your.email@example.com"}
]
keywords = ["data-mining", "clustering", "dimensionality-reduction", "machine-learning", "benchmarking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
all = [
    "data-mining-framework[dev,docs]"
]

[project.urls]
Homepage = "https://github.com/M-Gkiko/data_mining_framework"
Documentation = "https://github.com/M-Gkiko/data_mining_framework#readme"
Repository = "https://github.com/M-Gkiko/data_mining_framework.git"
"Bug Tracker" = "https://github.com/M-Gkiko/data_mining_framework/issues"

[project.scripts]
dm-benchmark = "data_mining_framework.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_mining_framework*"]

[tool.setuptools.package-data]
data_mining_framework = [
    "examples/**/*.yaml",
    "examples/**/*.py",
    "examples/**/*.md",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=data_mining_framework --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true